# grippybot

./: .gitignore  CONTRIBUTING.md  README.md  config.py  pyproject.toml  servo_driver.py  servo_test.py  test_angles.py
.github/workflows/: tests.yml
assembly/: README.md
grippybot/: __init__.py  config.py
grippybot/evaluation/: README.md  __init__.py  evaluate.py  visualize_attention.py
grippybot/hardware/: PI_SETUP.md  README.md  __init__.py  camera.py  servo_driver.py
grippybot/inference/: README.md  __init__.py  client.py  protocol.py  server.py
grippybot/model/: README.md  __init__.py  act.py  dataset.py  ensemble.py
grippybot/teleop/: README.md  __init__.py  recorder.py  teleop.py
grippybot/training/: README.md  __init__.py  train.py
scripts/: README.md  convert_dataset.py  servo_test.py
tests/: test_dataset.py  test_ensemble.py  test_model.py  test_protocol.py  test_training.py
